--- a/src/static/style.css
+++ b/src/static/style.css
@@ -23,7 +23,7 @@ button {
  */
 
 #sidebar {
-  background-color: #E57373;
+  background-image: linear-gradient(135deg, #ABDCFF 10%, #2196F3 100%);
   padding: 15px;
 }
 
@@ -46,4 +46,30 @@ button {
   #content {
     margin-left: 180px;
   }
+}
+
+.author {
+  font-size: .8rem;
+}
+
+.floating-btn {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+}
+
+.modal {
+  max-width: 600px;
+  max-height: 300px;
+  margin: 100px auto;
+  overflow-y: auto;
+  background-color: #fff;
+}
+
+.modal > h1 {
+  text-align: center;
+}
+
+.modal .modal-content {
+  padding: 1rem;
 }
